tests/unit/parser/domains/invalid/typing-without-requirement.pddl
; types section (3:10) is defined in domain, but `:typing` does not appear in requirements section
(define (domain typing-without-requirement)
        (:types a b c))